Fix text align to center in button container, center the button by margin auto,

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -25,11 +25,13 @@ body {
 
 .button-container {
   background: #e3f4ff;
-  padding: 8px auto;
+  padding: 8px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  margin: 0px auto;
   display: block;
 }
